--- a/css/welcome.css
+++ b/css/welcome.css
@@ -156,11 +156,16 @@ hr.small {
     width: 100%;
     height: 100%;
     abackground: url(../img/bg11.jpg) no-repeat center center scroll;
-    background: url(../img/bg11.jpeg);
+    abackground: url(../img/bg11.jpeg);
+    background: url(../img/back3.jpg);
     -webkit-background-size: cover;
     -moz-background-size: cover;
     background-size: cover;
     -o-background-size: cover;
+}
+
+.landing_heading {
+    color: #fff;
 }
 
 /* About */
