Changed the background color for admin and teacher

--- a/css/main.css
+++ b/css/main.css
@@ -3,7 +3,9 @@
 /* ==========================================================================
    Author's custom styles
    ========================================================================== */
-
+body {
+	background-color:#F5F5F5;
+}
 
 
 
