Removed client side validation for new period

--- a/css/main.css
+++ b/css/main.css
@@ -4,7 +4,7 @@
    Author's custom styles
    ========================================================================== */
 body {
-	background-color:#F5F5F5;
+	background-color:#FCFCFC;
 }
 
 
